# zk_docsim

./: .gitignore  Cargo.toml  Nargo.toml  Prover.toml  README.md  build.sh  embedding_gen.py  requirements.txt
backend/: Cargo.toml  db.rs  index.html
backend/db/: data.mdb
backend/embedded/: data.mdb
backend/src/: embedded.rs  main.rs
backend/src/services/: embed.rs  lmdb.rs  mod.rs  simple_db_nn.rs
backend/web/verifier/: index.html  main.js  wasm_verifier.d.ts  wasm_verifier.js  wasm_verifier_bg.wasm  wasm_verifier_bg.wasm.d.ts
embeddings/: doc1.json  doc2.json
frontend/: Cargo.toml
frontend/src/: lib.rs  main.rs  websocket.rs
host/: Cargo.toml
host/src/: lib.rs  main.rs
methods/: Cargo.toml  build.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
src/: main.nr
wasm-verifier/: Cargo.toml  build.sh
wasm-verifier/src/: lib.rs
web/: wasm_verifier.d.ts
web/verifier/: index.html  main.js  package.json  wasm_verifier.js  wasm_verifier_bg.wasm
