[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
wasm-bindgen = "0.2.100"
anyhow = "1.0.98"
serde = "1"
serde_derive = "1"
serde_json = "1"
gloo-net = { version="0.6.0", features=['websocket'] }
wasm-bindgen-futures = "0.4.50"
futures = "0.3.31"
log = "0.4.27"
web-sys = "0.3.77"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
