[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "^2.2.0" }
#risc0-zkvm = { version ="^2.2.0", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
bincode = "1.3.3"
sha2 = "0.10.9"
hex = "0.4.3"
